--- a/CVwebsite.html
+++ b/CVwebsite.html
@@ -323,7 +323,7 @@
                  A virtual Curriculum Vitae of my progress so far.
             </p>
             <div class="project-links">
-                <a href="https://github.com/barnetmolemane/cybersecurity-bot" target="_blank">
+                <a href="https://github.com/katleh0/Virtual-CV" target="_blank">
                     <i class="fab fa-github"></i> View on GitHub
                 </a>
             </div>
